0.14.3
[!] fixed integer underflow
[!] fixed a segfault with nop codec
[~] updated lz4 to r114
[~] updated LZJB to the latest FreeBSD version
[~] updated tornado to 0.6
[-] removed xxhash256, it's dangerously weak

0.14.2
[+] added FNV1a-penumbra
[!] fixed compilation issues on some Linuces

0.14.1
[+] added byte-swapping transforms (bswap16, bswap32, bswap64)
[!] added missing zconf.h
[!] minor fixes

0.14
[+] added z3lib 1.3
[+] added CityHash32
[+] added 128-bit variants of murmur hash
[+] added support for safe lz4 decoder. Use LZ4 for the fast one (like before) and LZ4safe for the safe one
[~] removed bcl-lz from the list of all codecs. It's so extremely slow it was disturbing testing. And lzfast is still there.
[~] the number of small_iters is not fixed; duration is
[~] updated CityHash64/128 to 1.1.0
[~] updated zlib to 1.2.8
[~] updated snappy to 1.1.0
[~] updated lzo to 2.06
[~] updated blosc to 1.2.3
[~] updated zopfli to 1.0.0
[~] updated SpookyHash to V2 2012-08-05
[~] updated LZ4 to r97
[~] cleanup
[!] restoring default console colour would fail on some systems
[!] several minor bugs

0.13.4
[+] added umac, vmac
[+] added ar
[~] cleanup
[~] improved printing of results
[!] added uhash, vhash, umac, vmac to the list of checksums
[!] Hopefully fixed compilation issues on some Unices 

0.13.3
[+] added uhash, vhash
[!] disabled FNV1a-YosimitsuTriadiiXMM unless SSL2 is explicitly enabled

0.13.2
[+] added more Sanmayce's hashes
[~] updated LZ4 to r95
[~] updated xxhash to r29
[-] removed LZ4bz because I don't want to handle the burden of maintaining the patch since Yann just totally changed packaging of LZ4
[!] portability issues

0.13.1
[~] minor cleanup and refactoring
[~] updated Blake2 to 20130131
[!] blake2s, blake2sp have 256-bit digests
[!] compilation errors on some platforms

0.13
[+] support for pipelining compression->encryption->checksumming (and other pipelines too)
[+] added a couple of SHA3 candidate hashes
[+] added gipfeli