@@ -1,10 +1,11 @@
 0.14.3
-[!] fixed integer underflow
-[!] fixed a segfault with nop codec
+[+] added memcpy, memmove codecs
 [~] updated lz4 to r114
 [~] updated LZJB to the latest FreeBSD version
 [~] updated tornado to 0.6
 [-] removed xxhash256, it's dangerously weak
+[!] fixed integer underflow
+[!] fixed a segfault with nop codec
 
 0.14.2
 [+] added FNV1a-penumbra
